# foxmonad

./: .gitignore  .gitmodules  CHANGELOG.md  build  cabal.project  run-in-xephyr.sh  vuli.cabal
app/: Main.hs
