cabal-version:      3.0
name:               vuli
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Pranaya Behera
maintainer:         pranaya.behera@outlook.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable vuli
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.1.0
                    , xmonad
                    , xmonad-contrib
                    , xmobar
                    , X11
                    , containers
                    , taffybar
    hs-source-dirs:   app
    default-language: Haskell2010
